# Django-book-assignment

./: README.md  conftest.py  db_dump.sql  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
book_lib/books/: admin.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
book_lib/books/migrations/: 0001_initial.py  0002_alter_book_description_alter_book_genre_and_more.py  0003_alter_book_title.py
book_lib/books/templates/books/: book_confirm_delete.html  book_form.html  book_list.html  scrape_books.html
book_lib/config/: settings.py  urls.py
book_lib/templates/: base.html  home.html
book_lib/templates/registration/: login.html
book_lib/tests/: conftest.py  test_endpoints.py  test_settings.py
