[project]
name = "django-book-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=5.2.12",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
